test/types/void/nothing-variable-use-2.good
nothing-variable-use-2.chpl:2: error: cannot initialize 'v' of type 'nothing' from '1'
